--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "dependencies": {
         "browserless": "^9.3.18",
         "html-get": "^2.9.16",
+        "jsdom": "^19.0.0",
         "node-html-parser": "^5.3.3",
         "puppeteer": "^14.1.0"
     },
