not finised, almost

--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
     "dependencies": {
         "browserless": "^9.3.18",
+        "cheerio": "^1.0.0-rc.10",
+        "crawler": "^1.3.0",
+        "crawler-url-parser": "^2.0.5",
+        "get-image-urls": "^1.0.4",
+        "got": "^12.0.4",
         "html-get": "^2.9.16",
         "jsdom": "^19.0.0",
         "node-html-parser": "^5.3.3",
